# TDT4140

./: README.md
travelbud-main/: .gitignore  .gitlab-ci.yml  config-overrides.js  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt
travelbud-main/api/: asgi.py  middleware.py  models.py  settings.py  urls.py  views.py  wsgi.py
travelbud-main/frontend/: App.js  Register.js  index.js
travelbud-main/frontend/components/: DestinationItem.css  DestinationItem.js  DestinationSite.jsx  Homepage.jsx  Loginform.css  Loginform.jsx  Logout.js  Register.css  RegisterForm.js
